# ocaml-processor

./: .gitignore  CHANGES.md  LICENSE.md  README.md  cpu.opam  dune-project  index.html  processor.opam
.github/workflows/: main.yml
lib/: affinity.ml  affinity.mli  amd64.default.ml  cpu.ml  cpu.mli  cpu_linux_stubs.c  cpu_stubs.c  dune  ioreg.default.ml  lcpu.ml  processor.ml  query.apple.ml  query.from_topology.ml  query.mli  query_apple.ml  query_fake.ml  query_from_topology.ml  query_linux.ml  topology.amd64.ml  topology.fake.ml  topology.mli  topology_amd64.ml  topology_apple.ml  topology_apple_amd64.ml  topology_apple_arm64.ml  topology_fake.ml  topology_linux.ml
lib/amd64/: amd64.ml  amd64.mli  amd64_stubs.c  dune
lib/ioreg/: cpu_apple_ioreg.amd64.ml  cpu_apple_ioreg.ml  dune  ioreg_stubs.c  processor_apple_ioreg.ml
other/: ioreg.x86  ioreg_apple.c  macmini.sh
processor/: index.html
processor/Amd64/: index.html
processor/Processor/: index.html
processor/Processor/Affinity/: index.html
processor/Processor/Cpu/: index.html
processor/Processor/Query/: index.html
processor/Processor/Topology/: index.html
test/: cpu.ml  dune  test.ml
