(library
 (name cpu_apple_ioreg)
 (public_name cpu.apple_ioreg)
 (libraries
  (select cpu_apple_ioreg.ml from
   (amd64 -> cpu_apple_ioreg.amd64.ml)))
 (enabled_if (= %{system} "macosx"))
 (foreign_stubs
  (language c)
  (names ioreg_stubs))
 (c_library_flags (-lpthread) (-framework IOKit) (-framework Foundation)))

